--- a/css/pages.css
+++ b/css/pages.css
@@ -264,6 +264,7 @@ html.gte-ie9 #viewer-content h1.solr-result {
 
 .islandora-basic-image-content-wrapper, 
 .islandora-large-image-content-wrapper,
+.islandora-video-content-wrapper,
 #book-page-viewer, 
 #book-viewer, 
 .islandora-objects-grid, 
